Fix: insights model filter - unnnic-select-smart wrap

--- a/src/views/Insights/styles.scss
+++ b/src/views/Insights/styles.scss
@@ -58,6 +58,12 @@
       &__title {
         padding-bottom: 0.3rem;
       }
+      &__select{
+        ::v-deep .unnnic-select-smart__options__multiple__selecteds {
+          width: auto;
+          flex-wrap: wrap;
+        }
+      }
     }
   }
 
